HelloUltraviolet/Fixtures/RejectedSource/Expressions/ArrayIndexNonUsize/Expected.uv
//! Expected diagnostic metadata for the ArrayIndexNonUsize rejected-source specimen.

expectedDiagnostic("E-TYP-1812", "Index-Array-NonUsize")
